Use factories instead of services in configuration to allow analysis parametrization.
Signed-off-by: Daniel Danis <daniel.gordon.danis@protonmail.com>